# flower-boilerplate

./: .gitignore  README.md  pyproject.toml
configs/: node_configs.yaml
fl_boilerplate/: __init__.py  client_app.py  server_app.py  task.py  tensorboard_utils.py
scripts/: setup_node.sh  start_superlink.sh  start_supernode.sh
